// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > Snapshot Tests > matches snapshot for basic select 1`] = `
<div>
  <select
    class="select-component"
  >
    <option
      value=""
    >
      请选择
    </option>
    <option
      value="1"
    >
      选项1
    </option>
    <option
      value="2"
    >
      选项2
    </option>
    <option
      value="3"
    >
      选项3
    </option>
  </select>
</div>
`;

exports[`Select > Snapshot Tests > matches snapshot when disabled 1`] = `
<div>
  <select
    class="select-component"
    disabled=""
  >
    <option
      value=""
    >
      请选择
    </option>
    <option
      value="1"
    >
      选项1
    </option>
    <option
      value="2"
    >
      选项2
    </option>
    <option
      value="3"
    >
      选项3
    </option>
  </select>
</div>
`;

exports[`Select > Snapshot Tests > matches snapshot with custom placeholder 1`] = `
<div>
  <select
    class="select-component"
  >
    <option
      value=""
    >
      自定义占位符
    </option>
    <option
      value="1"
    >
      选项1
    </option>
    <option
      value="2"
    >
      选项2
    </option>
    <option
      value="3"
    >
      选项3
    </option>
  </select>
</div>
`;

exports[`Select > Snapshot Tests > matches snapshot with selected value 1`] = `
<div>
  <select
    class="select-component"
  >
    <option
      value=""
    >
      请选择
    </option>
    <option
      value="1"
    >
      选项1
    </option>
    <option
      value="2"
    >
      选项2
    </option>
    <option
      value="3"
    >
      选项3
    </option>
  </select>
</div>
`;
